Добавил страницу Портфолио с хедером и футером

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,10 @@
     color: var(--title-text-color);
 }
 
+.site-nav .link.current {
+    color: var(--accent-text-color);
+}
+
 .site-nav .link:hover,
 .site-nav .link:focus {
     color: var(--accent-text-color);
