--- a/css/styles.css
+++ b/css/styles.css
@@ -95,9 +95,14 @@ body {
 
 /* Hero */
 
+.hero {
+    background-color: var(--primary-bgc);
+}
+
+
+
 .hero-title {
     color: var(--wtite-color);
-    background-color: var(--primary-bgc);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -171,8 +176,8 @@ body {
 
 .button.primary:hover,
 .button.primary:focus {
-    color: var(--title-text-color);
-    background-color: var(--accent-text-color);
+    color: var(--wtite-color);
+    background-color: #188CE8;
 }
 
 .button.secondary:hover,
